# MyCraft

./: .gitignore  README.md  update_documentation.pl
Interview/GildedRose-Refactoring-Kata/: README.md
Interview/GildedRose-Refactoring-Kata/Java/: pom.xml
Kata/Implementations/StringCalculator/: README.md
Kata/sources/Bowling/: README.md
Kata/sources/Bowling/java/: pom.xml
Kata/sources/StringCalculator/: README.md
Kata/sources/StringCalculator/c++/: CMakeLists.txt  StringCalculator.cpp  StringCalculator.hpp  StringCalculatorTests.cpp
Kata/sources/StringCalculator/python/: StringCalculator.py  TestStringCalculator.py  calculator.py  test_string_calculator.py
Kata/sources/Tries/c++/: Main.cpp  Trie.cpp  Trie.hpp  TrieCreationTests.cpp
Kata/sources/XUnit/: README.md
Kata/sources/XUnit/java/: pom.xml
Kata/templates/c++/: CMakeLists.txt
Languages/c++/: CMakeLists.txt  DataStructureTests.cpp
Playground/: setup.pl
Playground/Languages/: README.md
Playground/Languages/c++/: ArrayTests.cpp  CMakeLists.txt  DataStructureTests.cpp  LinkedTests.cpp  QueueTests.cpp  StackTests.cpp  StringTests.cpp
Playground/Languages/c++/Algorithms/: _STLAlgoTest.cpp
Playground/Languages/c++/DataStructures/: Deque.cpp  List.cpp  PriorityQueue.cpp  Queue.cpp  Stack.cpp  String.cpp  _Array.cpp  _Map.cpp  _Vector.cpp
Playground/Languages/c++/Fondamentals/: Inheritance.cpp  LambdaFunctions.cpp  Namespace.cpp  Pointers.cpp  Struct.cpp  Template.cpp  _Classes.cpp
Playground/Languages/c++/Test/: ContainerMatchers.cpp  CustomMatcher.cpp  Fixture.cpp  Function.cpp  GenericComparisonMatchers.cpp  Mock.cpp  StringMatchers.cpp
Playground/Languages/java/: pom.xml
Playground/LevensteinDistanceInTries/: Readme.md
Playground/LevensteinDistanceInTries/c++/: CMakeLists.txt  Main.cpp
Playground/LevensteinDistanceInTries/c++/benchmarks/: AllBenchmarks.cpp  AllBenchmarks.hpp  BenchmarkWords.cpp  BenchmarkWords.hpp  Benchmarks.cpp  Benchmarks.hpp  DictionaryBenchmarks.cpp  DictionaryBenchmarks.hpp  DictionaryBenchmarksBuilder.cpp  DictionaryBenchmarksBuilder.hpp  TestSpace.hpp  TestTimer.hpp  main.cpp
Playground/LevensteinDistanceInTries/c++/benchmarks/data/: words_to_search.txt  words_to_search_wrong_spelling.txt
Playground/LevensteinDistanceInTries/c++/sources/: Dictionary.cpp  Dictionary.hpp  LevensteinDistanceInTries.hpp  LevensteinDistanceMatrix.cpp  LevensteinDistanceMatrix.hpp  RecursiveTrie.cpp  RecursiveTrie.hpp  Set.cpp  Set.hpp  StringMetricCalculator.hpp  Trie.cpp  Trie.hpp
Playground/LevensteinDistanceInTries/c++/tests/: DictionaryTests.cpp  LevensteinDistanceMatrixTests.cpp  SetTests.cpp  StringMetricCalculator.cpp  StringMetricCalculatorStub.cpp  StringMetricCalculatorStub.hpp  main.cpp
ProjectEuler/: setup.pl
ProjectEuler/includes/: continued_fractions.hpp  prime_utils.hpp  project_euler_environment.hpp
ProjectEuler/sources/AlmostEquilateralTriangles/: main.cpp
ProjectEuler/sources/AmicableChains/: main.cpp
ProjectEuler/sources/AnagramicSquares/: main.cpp
ProjectEuler/sources/ArithmeticExpressions/: main.cpp
ProjectEuler/sources/ArrangedProbability/: main.cpp
ProjectEuler/sources/CoinPartitions/: main.cpp
ProjectEuler/sources/CountingFractions/: main.cpp
ProjectEuler/sources/CountingFractionsInARange/: main.cpp
ProjectEuler/sources/CountingRectangles/: main.cpp
ProjectEuler/sources/CubeDigitPairs/: main.cpp
ProjectEuler/sources/CuboidRoute/: main.cpp
ProjectEuler/sources/DigitFactorialChains/: main.cpp
ProjectEuler/sources/Magic5gonRing/: main.cpp
ProjectEuler/sources/MonopolyOdds/: main.cpp
ProjectEuler/sources/OrderedFractions/: main.cpp
ProjectEuler/sources/PrimePowerTriples/: main.cpp
ProjectEuler/sources/PrimeSummations/: main.cpp
ProjectEuler/sources/ProductSumNumbers/: main.cpp
ProjectEuler/sources/RightTriangleWithIntegerCoordinates/: main.cpp
ProjectEuler/sources/RomanNumerals/: main.cpp
ProjectEuler/sources/SingularIntegerRightTriangles/: main.cpp
ProjectEuler/sources/SquareRootDigitalExpansion/: main.cpp
ProjectEuler/sources/SuDoku/: main.cpp
ProjectEuler/templates/: CMakeLists.txt  main.cpp
(+50 files in other folders)
